--- a/ShoeShop.csproj
+++ b/ShoeShop.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="34.0.2" />
+		<PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.21" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.23" />
@@ -19,6 +20,7 @@
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
 		<PackageReference Include="MySql.Data" Version="8.1.0" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
+		<PackageReference Include="PagedList.Mvc" Version="4.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
