--- a/ShoeShop.csproj
+++ b/ShoeShop.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
 		<PackageReference Include="MySql.Data" Version="8.1.0" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
+		<PackageReference Include="PayPal" Version="2.0.0-rc2" />
 	</ItemGroup>
 
 	<ItemGroup>
