--- a/ShoeShop.csproj
+++ b/ShoeShop.csproj
@@ -26,5 +26,6 @@
 	  <Folder Include="Areas\Admin\Data\" />
 	  <Folder Include="Areas\Admin\Models\" />
 	  <Folder Include="wwwroot\assets\js\pages\" />
+	  <Folder Include="wwwroot\img\blogs\" />
 	</ItemGroup>
 </Project>
