--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "SendGrid": {
+    "ApiKey": ""
+  },
   "ConnectionStrings": {
     "DefaultConnectionMySQL": "server=localhost; port=3306; database=shoe_shop; user=root; password=; Persist Security Info=False; Convert Zero Datetime=True;Allow Zero Datetime=True; Connect Timeout=300"
   },
