--- a/ShoeShop.csproj
+++ b/ShoeShop.csproj
@@ -36,6 +36,7 @@
 		<PackageReference Include="MySql.Data" Version="8.1.0" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
 		<PackageReference Include="PayPal" Version="2.0.0-rc2" />
+		<PackageReference Include="SendGrid" Version="9.27.0" />
 	</ItemGroup>
 
 	<ItemGroup>
