--- a/ShoeShop.csproj
+++ b/ShoeShop.csproj
@@ -23,6 +23,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="34.0.2" />
+		<PackageReference Include="MailKit" Version="4.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.21" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
@@ -33,10 +34,10 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+		<PackageReference Include="MimeKit" Version="4.3.0" />
 		<PackageReference Include="MySql.Data" Version="8.1.0" />
 		<PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
 		<PackageReference Include="PayPal" Version="2.0.0-rc2" />
-		<PackageReference Include="SendGrid" Version="9.27.0" />
 	</ItemGroup>
 
 	<ItemGroup>
